implement and fix a naive dynamodb table design
1. implement a naive dynamodb table for storing orders, partitioned by
   order ID
2. implement a simulation that seeds the table and measures the timing
   and capacity units usage
3. fix the table design to better support the required access patterns,
   eliminating the need for a full table scan

--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "experimentalDecorators": true,
+        "outDir": "./dist"
     },
     "include": ["lib/**/*.ts", "bin/**/*.ts"],
     "exclude": ["node_modules", "dist"]
