--- a/packages/order-service/package.json
+++ b/packages/order-service/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.995.0",
     "@aws-sdk/lib-dynamodb": "^3.995.0",
-    "@orders-sample/shared": "workspace:*"
+    "@orders-sample/shared": "workspace:*",
+    "uuid": "^13.0.0"
   },
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
