--- a/simulations/package.json
+++ b/simulations/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
+    "partition-naive": "AWS_REGION=us-east-1 AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566 tsx src/partition-naive.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "packageManager": "pnpm@10.11.1",
+  "dependencies": {
+    "@orders-sample/order-service": "workspace:*"
+  },
   "devDependencies": {
+    "@types/node": "^25.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
