--- a/simulations/tsconfig.json
+++ b/simulations/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "include": ["src/**/*.ts"],
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "dist"
+    },
     "exclude": ["node_modules", "dist"]
 }
