--- a/simulations/package.json
+++ b/simulations/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
+    "flush": "AWS_REGION=us-east-1 AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566 tsx src/flush.ts",
     "partition-naive": "AWS_REGION=us-east-1 AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566 tsx src/partition-naive.ts",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "packageManager": "pnpm@10.11.1",
   "dependencies": {
-    "@orders-sample/order-service": "workspace:*"
+    "@orders-sample/order-service": "workspace:*",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.995.0",
+    "@aws-sdk/lib-dynamodb": "^3.995.0",
     "@types/node": "^25.3.0",
+    "@types/uuid": "^11.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
