migrate from CDK to pulumi
CDK wasn't fun, nor was localstack, in the end. pulumi supports
infrastructure-as-code in TS, is much cleaner and has a better
ecosystem

on the localstack side, i'm going to experiment directly with AWS
instead for these reasons:

1. localstack is sluggish and brittle - deploying an API gateway would
   sometimes leave it unavailable, meaning recreating the environment
2. localstack doesn't support everything i want to experiment with
3. localstack doesn't play as well with pulumi as CDK does

i've updated the simulations and lambdas to support configuration of table
names via pulumi, along with a helper script to run simulations with the
correct configured table name

--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "outDir": "./dist"
+        "module": "commonjs",
+        "moduleResolution": "node",
     },
-    "include": ["lib/**/*.ts", "bin/**/*.ts"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["index.ts"]
 }
