--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -2,21 +2,14 @@
   "name": "@orders-sample/infrastructure",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "packageManager": "pnpm@10.11.1",
   "dependencies": {
-    "aws-cdk-lib": "^2.239.0",
-    "constructs": "^10.5.1",
-    "source-map-support": "^0.5.21"
+    "@pulumi/aws": "^7.20.0",
+    "@pulumi/pulumi": "^3.224.0"
   },
   "devDependencies": {
-    "@types/node": "^25.3.0",
-    "aws-cdk": "^2.1107.0",
-    "aws-cdk-local": "^3.0.1",
-    "esbuild": "^0.27.3",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
