--- a/packages/inventory-service/package.json
+++ b/packages/inventory-service/package.json
@@ -2,7 +2,7 @@
   "name": "@orders-sample/inventory-service",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
