introduce test harness and mock dynamodb
- introduce a test harness and a mock dynamodb service
- refactor repository and API handlers to better support testing against
  a mock, concurrency-safe dynamodb instance
- cover the create endpoint in tests and increase robustness
- introduce helper to mock API gateway events
- introduce zod for schema parsing at boundaries, protecting services
  from data corruption

notes:

there now exists a helper to create a dynamodb table per test-file
(since that seems to be the unit of concurrent work with vitest) - this
is created and destroyed before and after each test file runs

this lives in the shared package but i'm not 100% happy with this - test
helpers should be development only, so should be in a separate package
and only included in `devDependencies`, with shared exclusively for code
we're happy to bundle in a production build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
 services:
-  localstack:
-    image: localstack/localstack:latest
+  dynamodb-local:
+    image: amazon/dynamodb-local:latest
     ports:
-      - "4566:4566"
-    environment:
-      - SERVICES=dynamodb,lambda,apigateway,sqs,sns,events,cloudwatch,logs,iam,sts,ssm,cloudformation
-      - DEBUG=0
-      - LAMBDA_EXECUTOR=docker
-      - DOCKER_HOST=unix:///var/run/docker.sock
-    volumes:
-      - localstack-data:/var/lib/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
-
-volumes:
-  localstack-data:
+      - "8000:8000"
+    command: "-jar DynamoDBLocal.jar -inMemory -sharedDb"
