--- a/packages/order-service/package.json
+++ b/packages/order-service/package.json
@@ -10,13 +10,15 @@
     "@aws-sdk/client-dynamodb": "^3.995.0",
     "@aws-sdk/lib-dynamodb": "^3.995.0",
     "@orders-sample/shared": "workspace:*",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.6"
   },
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.160",
     "@types/node": "^25.3.0",
     "esbuild": "^0.27.3",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
