--- a/packages/payment-service/package.json
+++ b/packages/payment-service/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.160",
     "esbuild": "^0.27.3",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
