--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,14 +1,23 @@
 {
   "name": "@orders-sample/shared",
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "@types/aws-lambda": "^8.10.160",
+    "@types/node": "^25.3.0",
+    "aws-lambda": "^1.0.7",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.995.0",
+    "@aws-sdk/lib-dynamodb": "^3.995.0",
+    "zod": "^4.3.6"
   }
 }
