--- a/simulations/package.json
+++ b/simulations/package.json
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@10.11.1",
   "dependencies": {
     "@orders-sample/order-service": "workspace:*",
+    "@orders-sample/shared": "workspace:*",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@types/node": "^25.3.0",
     "@types/uuid": "^11.0.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
