migrate to neverthrow
covering the create orders endpoint with tests became ugly fast.
exception handling in JS and TS is just not nice

so i migrated to neverthrow, which provides a `Result` type and
programming with errors as values

this enables a number of nice things:

- we are forced to handle all errors returned from a function
- common error handling can be generalised using simple, pure functions
- route handlers become concise pipelines of transformational functions
- separation of pure functions and side-effects is neatly encouraged

to that end in `@order-sample/shared`, there is now:

- `toHttpResponse`, converting errors in HTTP responses
- `getJsonBody`, which lifts a value into `Result` if the provided
  content type is `application/json` (if not, it is assumed)
- `parseJsonObjectBody`, which parses a JSON object encoded as a string
  to an object, failing otherwise (e.g either it `undefined` or it's not
a JSON object)
- `parse`, which accepts a zod schema and a value and lifting the Zod result
  into `Result` with an appropriate app error (though, this function
could be better named, perhaps `parseToSchema`)
- `createDynamoErrorHandler`, which creates a function to translate
  DynamoDB exceptions into error values supported by the app

i'm unhappy with where `parse` and `createDynamoErrorHandler` live but i
plan to move these later when we expand this

i also took the time to move the lambda event types to V2, since that's
what we've configured with Pulumi - apparently routing is simpler,
thanks to the `routeKey` property

i have also fixed `@simulations/partition-naive` and added a `build`
script to `package.json` since it was failing silently

--- a/packages/order-service/package.json
+++ b/packages/order-service/package.json
@@ -10,6 +10,7 @@
     "@aws-sdk/client-dynamodb": "^3.995.0",
     "@aws-sdk/lib-dynamodb": "^3.995.0",
     "@orders-sample/shared": "workspace:*",
+    "neverthrow": "^8.2.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
