--- a/packages/inventory-service/package.json
+++ b/packages/inventory-service/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@orders-sample/shared": "workspace:*"
+    "@orders-sample/shared": "workspace:*",
+    "neverthrow": "^8.2.0"
   },
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
